--- a/doodle-broker-client-starter/pom.xml
+++ b/doodle-broker-client-starter/pom.xml
@@ -24,6 +24,14 @@
       <groupId>doodle</groupId>
       <artifactId>doodle-broker-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-messaging</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.rsocket</groupId>
+      <artifactId>rsocket-transport-netty</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
