--- a/doodle-broker-client/pom.xml
+++ b/doodle-broker-client/pom.xml
@@ -21,6 +21,25 @@
       <artifactId>spring-boot-starter</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>doodle</groupId>
+      <artifactId>doodle-broker-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-messaging</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>io.rsocket</groupId>
+      <artifactId>rsocket-core</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>io.rsocket</groupId>
+      <artifactId>rsocket-transport-netty</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
