--- a/doodle-broker-core/pom.xml
+++ b/doodle-broker-core/pom.xml
@@ -12,29 +12,36 @@
     <relativePath>../doodle-broker-parent/pom.xml</relativePath>
   </parent>
 
-  <artifactId>doodle-broker-server-starter</artifactId>
+  <artifactId>doodle-broker-core</artifactId>
   <packaging>jar</packaging>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
+      <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>doodle</groupId>
-      <artifactId>doodle-broker-server</artifactId>
+      <groupId>io.rsocket</groupId>
+      <artifactId>rsocket-transport-netty</artifactId>
+      <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-rsocket</artifactId>
+      <groupId>io.projectreactor</groupId>
+      <artifactId>reactor-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.agrona</groupId>
-      <artifactId>agrona</artifactId>
+      <groupId>io.projectreactor.netty</groupId>
+      <artifactId>reactor-netty</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.roaringbitmap</groupId>
-      <artifactId>RoaringBitmap</artifactId>
+      <groupId>io.rsocket</groupId>
+      <artifactId>rsocket-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-messaging</artifactId>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
