--- a/doodle-broker-server/pom.xml
+++ b/doodle-broker-server/pom.xml
@@ -17,8 +17,22 @@
 
   <dependencies>
     <dependency>
+      <groupId>doodle</groupId>
+      <artifactId>doodle-broker-core</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter</artifactId>
+      <artifactId>spring-boot-starter-rsocket</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.agrona</groupId>
+      <artifactId>agrona</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.roaringbitmap</groupId>
+      <artifactId>RoaringBitmap</artifactId>
       <optional>true</optional>
     </dependency>
   </dependencies>
