--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <module>doodle-broker-parent</module>
     <module>doodle-broker-client</module>
     <module>doodle-broker-client-starter</module>
+    <module>doodle-broker-core</module>
     <module>doodle-broker-server</module>
     <module>doodle-broker-server-starter</module>
   </modules>
