--- a/doodle-broker-starters/doodle-broker-client-starter/pom.xml
+++ b/doodle-broker-starters/doodle-broker-client-starter/pom.xml
@@ -7,12 +7,12 @@
 
   <parent>
     <groupId>doodle</groupId>
-    <artifactId>doodle-broker-parent</artifactId>
+    <artifactId>doodle-broker-starters</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../doodle-broker-parent/pom.xml</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>doodle-broker-server-starter</artifactId>
+  <artifactId>doodle-broker-client-starter</artifactId>
   <packaging>jar</packaging>
 
   <dependencies>
@@ -22,19 +22,15 @@
     </dependency>
     <dependency>
       <groupId>doodle</groupId>
-      <artifactId>doodle-broker-server</artifactId>
+      <artifactId>doodle-broker-client</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-rsocket</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-messaging</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.agrona</groupId>
-      <artifactId>agrona</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.roaringbitmap</groupId>
-      <artifactId>RoaringBitmap</artifactId>
+      <groupId>io.rsocket</groupId>
+      <artifactId>rsocket-transport-netty</artifactId>
     </dependency>
   </dependencies>
 
