--- a/samples/broker-server/src/main/resources/application.yml
+++ b/samples/broker-server/src/main/resources/application.yml
@@ -3,7 +3,7 @@ doodle:
     broker:
       server:
         proxy:
-          enabled: false
+          enabled: true
           port: 8001
         cluster:
           port: 9001
