feat: 添加新的客户端 Broker/Cluster 单连接模式

--- a/samples/broker-server/src/main/resources/application.yml
+++ b/samples/broker-server/src/main/resources/application.yml
@@ -1,9 +1,6 @@
-doodle:
-  rsocket:
-    broker:
-      server:
-        proxy:
-          enabled: true
-          port: 8001
-        cluster:
-          port: 9001
+doodle.rsocket.broker.server:
+  proxy:
+    enabled: true
+    port: 8001
+  cluster:
+    port: 9001
