feat: 添加客户端示例项目和修复一些bug

--- a/samples/broker-app/src/main/resources/app1.yml
+++ b/samples/broker-app/src/main/resources/app1.yml
@@ -1,4 +1,6 @@
 doodle.rsocket.broker.client:
-  serviceName: sample
+  serviceName: sample1
+  tags:
+    instance-name: sample1
   brokers:
     - tcp://localhost:8001
