--- a/doodle-broker-parent/pom.xml
+++ b/doodle-broker-parent/pom.xml
@@ -15,6 +15,10 @@
   <artifactId>doodle-broker-parent</artifactId>
   <packaging>pom</packaging>
 
+  <properties>
+    <maven.deploy.skip>false</maven.deploy.skip>
+  </properties>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
