--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -16,6 +16,7 @@
   <packaging>pom</packaging>
 
   <properties>
+    <maven.deploy.skip>true</maven.deploy.skip>
     <parameter.spotless.license>${project.basedir}/../../checkstyle/license-header.txt</parameter.spotless.license>
   </properties>
 
