--- a/samples/broker-app/pom.xml
+++ b/samples/broker-app/pom.xml
@@ -18,6 +18,14 @@
   <dependencies>
     <dependency>
       <groupId>doodle</groupId>
+      <artifactId>broker-common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-rsocket</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>doodle</groupId>
       <artifactId>doodle-broker-starter-client</artifactId>
     </dependency>
   </dependencies>
