chore: 添加unicast/multiicast使用用例

--- a/samples/broker-app/src/main/resources/app1.yml
+++ b/samples/broker-app/src/main/resources/app1.yml
@@ -2,5 +2,6 @@ doodle.rsocket.broker.client:
   serviceName: sample1
   tags:
     instance-name: sample1
+    instance-type: sample
   brokers:
     - tcp://localhost:8001
