--- a/samples/broker-app/src/main/resources/app3.yml
+++ b/samples/broker-app/src/main/resources/app3.yml
@@ -2,5 +2,6 @@ doodle.rsocket.broker.client:
   serviceName: sample3
   tags:
     instance-name: sample3
+    instance-type: sample
   brokers:
     - tcp://localhost:8003
