chore: Address协议添加brokerId解决ttl问题

--- a/samples/broker-app/src/main/resources/app2.yml
+++ b/samples/broker-app/src/main/resources/app2.yml
@@ -3,5 +3,6 @@ doodle.rsocket.broker.client:
   tags:
     instance-name: sample2
     instance-type: sample
-  brokers:
-    - tcp://localhost:8002
+  broker:
+    uri: tcp://localhost:8002
+    brokerId: 00000000-0000-0000-0000-00000002
