--- a/samples/broker-server/src/main/resources/broker2.yml
+++ b/samples/broker-server/src/main/resources/broker2.yml
@@ -1,4 +1,5 @@
 doodle.rsocket.broker.server:
+  brokerId: 00000000-0000-0000-0000-00000002
   proxy:
     enabled: true
     uri: tcp://localhost:8002
