chore: 添加使用protobuf的示例工程

--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -25,6 +25,7 @@
     <module>broker-app</module>
     <module>broker-common</module>
     <module>broker-server</module>
+    <module>protobuf-app</module>
   </modules>
 
   <dependencyManagement>
